--- a/ToDoApp/app/build.gradle
+++ b/ToDoApp/app/build.gradle
@@ -1,14 +1,13 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-//    id 'kotlin-android-extensions'
 }
 
 android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "com.example.twoinoneapp"
+        applicationId "com.example.todoapp"
         minSdk 21
         targetSdk 30
         versionCode 1
